feat: GCA-XX | modify swagger docs
