# internal/deliveries/http/v1/role_v1_handler.go
@@ -23,6 +23,18 @@ func NewRoleHandler(api *echo.Group, u *usecases.Usecases) {
 	endpoint.GET("", handler.GetAllRoles)
 }
 
+// Create godoc
+// @Summary Create Roles
+// @Description Create roles which would be for access
+// @Tags roles
+// @Accept json
+// @Produce json
+// @Param user body models.CreateRoleRequest true "User object that needs to be added"
+// @Param X-API-Key header string true "mandatory header to access endpoint"
+// @Success 201 {object} models.RoleResponse "Response indicates that the request succeeded and the resources has been fetched and transmitted in the message body"
+// @Failure 400 {object} models.ErrorResponse "Bad Request"
+// @Failure 422 {object} models.ErrorValidationResponse{errors=validator.ErrorValidateResponse} "Validation error. This can happen if there is an error validation while create account"
+// @Router /v1/users/types [post]
 func (rh *RoleHandler) Create(ctx echo.Context) error {
 	// Bind the JSON Request in order to get the usecase work
 	var request models.CreateRoleRequest
@@ -45,6 +57,17 @@ func (rh *RoleHandler) Create(ctx echo.Context) error {
 
 }
 
+// GetAllRoles godoc
+// @Summary Get All Roles
+// @Description Get All Roles
+// @Tags roles
+// @Accept json
+// @Produce json
+// @Param X-API-Key header string true "mandatory header to access endpoint"
+// @Success 200 {object} models.List{data=[]models.RoleResponse} "Response indicates that the request succeeded and the resources has been fetched and transmitted in the message body"
+// @Failure 400 {object} models.ErrorResponse "Bad Request"
+// @Failure 422 {object} models.ErrorValidationResponse{errors=validator.ErrorValidateResponse} "Validation error. This can happen if there is an error validation while create account"
+// @Router /v1/campuses [get]
 func (rh *RoleHandler) GetAllRoles(ctx echo.Context) error {
 	data, err := rh.usecase.Role.GetAll(ctx.Request().Context())
 	if err != nil {
